# coderift

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: formatter.rs  lib.rs  main.rs  walker.rs
